<resources>
    <string name="app_name">Problem assistant</string>
    <string name="advantagesName">Name of an advantage</string>
    <string name="disadvantageName">Name of a disadvantage</string>
    <string name="advantages_disadvantageName">Title of the advantage/disadvantage</string>
    <string name="label_edit_problem_name">Title of the problem</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="negative_5" translatable="false">-5</string>
    <string name="negative_4" translatable="false">-4</string>
    <string name="negative_3" translatable="false">-3</string>
    <string name="negative_2" translatable="false">-2</string>
    <string name="negative_1" translatable="false">-1</string>
    <string name="negative_positive_0" translatable="false">0</string>
    <string name="positive_1" translatable="false">1</string>
    <string name="positive_2" translatable="false">2</string>
    <string name="positive_3" translatable="false">3</string>
    <string name="positive_4" translatable="false">4</string>
    <string name="positive_5" translatable="false">5</string>
    <string name="popupEdit">Edit</string>
    <string name="popupDelete">Delete</string>

    <string name="analyzeProblemTabSummaryInformation">General information</string>
    <string name="analyzeLinearProblemTabAdvantages">Advantages</string>
    <string name="analyzeLinearProblemTabDisadvantages">Disadvantages</string>

    <string name="popupAnalyze">Analyze</string>

    <string name="problem_list_fragment_label">Problem list</string>
    <string name="card_list_fragment_label">Advantages/Disadvantages list</string>
    <string name="action_settings">Settings</string>
    <string name="problem_edit_fragment_label">Edit problem</string>
    <string name="problem_new_fragment_label">New problem</string>
    <string name="advantageEditLabel">Edit advantage</string>
    <string name="disadvantageEditLabel">Edit disadvantage</string>
    <string name="advantage_disadvantageEditLabel">Edit advantage/disadvantage</string>
    <string name="advantageNewLabel">New advantage</string>
    <string name="disadvantageNewLabel">New disadvantage</string>
    <string name="advantage_disadvantageNewLabel">New advantage/disadvantage</string>
    <string name="advantageFragmentLabel">Advantage</string>
    <string name="disadvantageFragmentLabel">Disadvantage</string>
    <string name="advantage_disadvantageFragmentLabel">Advantage/Disadvantage</string>
    <string name="label_edit_card_description">Description of advantage/disadvantage</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analyzeProblemFragmentLabel">Problem analysis</string>
    <string name="analyzeCardFragmentLabel">Rating changes chart</string>
    <string name="analyzeCardFragmentGraphLabel">Rating changes in \"%s\"</string>
    <string name="removeItemConfirm">Deleting confirmation</string>
    <string name="removeItemConfirmMessage">Do you really want to delete %s?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="graphScoreChanged">Rating changes chart</string>
    <string name="fixButton">Edit</string>
    <string name="okButton">OK</string>
    <string name="problemNameBusyTitle">Problem title is busy</string>
    <string name="problemNameBusyMessage">Problem \"%s\" is already exists. Please enter another title.</string>
    <string name="cardAdvantageNameBusyTitle">Advantage title is busy</string>
    <string name="cardDisadvantageNameBusyTitle">Disadvantage title is busy</string>
    <string name="cardAdvantage_DisadvantageNameBusyTitle">Advantage/Disadvantage title is busy</string>
    <string name="cardAdvantageNameBusyMessage">Advantage \"%s\" is already exists. Please enter another title.</string>
    <string name="cardDisadvantageNameBusyMessage">Disadvantage \"%s\" is already exists. Please enter another title.</string>
    <string name="cardAdvantage_DisadvantageNameBusyMessage">Advantage/Disadvantage \"%s\" is already exists. Please enter another title.</string>
    <string name="informationTitle">Information</string>
    <string name="informationProblemAlertBody">Value \"%s\" is a mean of your advantages/disadvantages average values sum</string>
    <string name="informationProblemDescartesSquaredAlertBody">Problem \"%s\" is solving via Descartes square</string>
    <string name="informationCardAlertBody">Value \"%s\" is an average of your advantages/disadvantages</string>

    <string name="checkScoreNow">Rate an advantage/disadvantage later</string>

    <string name="informationText">Last time you rated %1$s \"%2$s\" with \"%3$s\" at %4$s.\nYou can confirm or revalue the rating.</string>
    <string name="informationTextNotScore">You didn\'t rate \"%s\".\nYou need to revalue the rating.</string>
    <string name="advantage">advantage</string>
    <string name="disadvantage">disadvantage</string>
    <string name="advantage_disadvantage">advantage/disadvantage</string>
    <string name="confirmButton">Confirm</string>
    <string name="confirmButtonInformationAction">Your last rate \"%1$d\" at \"%2$s\" was confirmed today</string>
    <string name="makeNewScoreButton">Revalue</string>
    <string name="makeScoreButton">Rate</string>

    <string name="cardNameTitle">Title of %s:</string>
    <string name="cardDescriptionTitle">Description of %s:</string>
    <string name="advantageR">advantage</string>
    <string name="disadvantageR">disadvantage</string>
    <string name="advantage_disadvantageR">advantage/disadvantage</string>

    <string name="problemTypeLabel">Problem type:</string>
    <string name="linearProblem">Linear problem</string>
    <string name="descartesSquaredProblem">Descartes square</string>

    <string name="descartesSquaredShort">DS</string>

    <string name="descartesSquaredSpinnerCardLabel">Choose the graph quadrant:</string>
    <string name="descartesSquaredIQuarterLong">I – <b>Plus</b> if it will <b>happen</b></string>
    <string name="descartesSquaredIIQuarterLong">II – <b>Minus</b> if it will <b>happen</b></string>
    <string name="descartesSquaredIIIQuarterLong">III – <b>Plus</b> if it won\'t <b>happen</b></string>
    <string name="descartesSquaredIVQuarterLong">IV – <b>Minus</b> if it won\'t <b>happen</b></string>
    <string name="descartesSquaredIQuarter">I – <b>+</b>, <b>it will happen</b></string>
    <string name="descartesSquaredIIQuarter">II – <b>-</b>, <b>it will happen</b></string>
    <string name="descartesSquaredIIIQuarter">III – <b>+</b>, <b>it won\'t happen</b></string>
    <string name="descartesSquaredIVQuarter">IV – <b>-</b>, <b>it won\'t happen</b></string>
    <string name="descartesSquaredIQuarterFotGetString">I – &lt;b>Plus&lt;/b> if it will &lt;b>happen&lt;/b></string>
    <string name="descartesSquaredIIQuarterFotGetString">II – &lt;b>Minus&lt;/b> if it will &lt;b>happen&lt;/b></string>
    <string name="descartesSquaredIIIQuarterFotGetString">III – &lt;b>Plus&lt;/b> if it won\'t &lt;b>happen&lt;/b></string>
    <string name="descartesSquaredIVQuarterFotGetString">IV – &lt;b>Minus&lt;/b> if it won\'t &lt;b>happen&lt;/b></string>

    <string name="descartesSquaredIQuarterShort">I</string>
    <string name="descartesSquaredIIQuarterShort">II</string>
    <string name="descartesSquaredIIIQuarterShort">III</string>
    <string name="descartesSquaredIVQuarterShort">IV</string>

    <string name="cardListLabel">Cards list</string>
    <string name="cardNewLabel">Create card</string>
    <string name="cardEditLabel">Edit card</string>
    <string name="cardLabel">Card</string>
    <string name="cardDescartesSquaredNameBusyTitle">Card title is busy</string>
    <string name="cardDescartesSquaredNameBusyMessage">Card \"%s\" is already exists. Please enter another title.</string>
    <string name="informationCardDescartesSquaredAlertBody">The card is located in the quadrant: \"%s\"</string>

    <string name="informationDescartesSquaredText">The card is located in the quadrant: \"%s\"</string>

    <string name="avgPointsLabel">You want to solve \"%s\" with an index of %s</string>
    <string name="countMotivationLabel">Count of your advantages — %s</string>
    <string name="countAnchorLabel">Count of your disadvantages — %s</string>
    <string name="summaryCountCardLabel">Total count of your cards — %d</string>
    <string name="dateOfFirstProblemAssessmentLabel">Date of first problem estimate — %s</string>
    <string name="dateOfLastProblemAssessmentLabel">Date of last problem estimate — %s</string>

    <string name="descartesSquaredGroupCardCountLabel">Quadrant \"%1$s\" card count is — %2$d</string>
    <string name="descartesSquaredDateOfFistCardCreateLabel">Date of first card creation — %s</string>
    <string name="descartesSquaredDateOfLastCardCreateLabel">Date of first card creation — %s</string>

    <string name="settingsFragmentLabel">Settings</string>
    <string name="importButton">Import</string>
    <string name="exportButton">Export</string>
    <string name="importFragmentLabel">Import data</string>
    <string name="exportDataAction">Send data file via…</string>
    <string name="importDataAction">Select data file</string>
    <string name="fullReplaceRadioButton">Rewrite your data with imported data</string>
    <string name="enrichmentRadioButton">Data complement with imported data</string>
    <string name="onlyNewRadioButton">Import only new problems</string>

</resources>