<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutVariants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoreSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negative_positive_0"
        android:textAlignment="center"
        android:textSize="@dimen/thumb_text_size" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBarVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5"
        android:progressDrawable="@drawable/seekbar_drawable_progress"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_drawable_thumb"
        android:thumbOffset="0dp" />
</LinearLayout>