...
        android:layout_alignBottom="@id/cardAvgPoint"
        android:layout_toStartOf="@id/cardAvgPoint"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/cardDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceListItem" />

...
